with http request

--- a/11_27_2024/makefile
+++ b/11_27_2024/makefile
@@ -5,3 +5,5 @@ PracticalSocket.o: PracticalSocket.h PracticalSocket.cpp
 	g++ -pedantic-errors -g -c PracticalSocket.cpp -o PracticalSocket.o
 server: PracticalSocket.o server.cpp
 	g++ -pedantic-errors -g server.cpp PracticalSocket.o -o server
+main: main.cpp
+	g++ -pedantic-errors -g main.cpp -o main
